--- a/client/src/components/Messages/index.css
+++ b/client/src/components/Messages/index.css
@@ -1,7 +1,9 @@
 .container {
   flex-grow: 1;
   overflow-y: auto;
+  overflow: scroll;
   padding: 20px;
+  scroll-behavior: smooth;
   & > .topBar {
     background-color: #075e54;
     padding: 10px;
@@ -16,6 +18,7 @@
   & > .chatboxReceived {
     margin-bottom: 15px;
     & > .baloon {
+      overflow: clip;
       background-color: #dcf8c6;
       border-radius: 10px;
       padding: 10px;
@@ -27,6 +30,8 @@
       }
       & .message {
         margin: 0;
+        word-wrap: break-word;
+        white-space: pre-wrap;
       }
     }
   }
@@ -34,6 +39,7 @@
     margin-bottom: 15px;
     text-align: end;
     & > .baloon {
+      overflow: clip;
       background-color: #d6d2d2;
       border-radius: 10px;
       padding: 10px;
@@ -44,6 +50,8 @@
         margin: 0 0 5px 0;
       }
       & .message {
+        word-wrap: break-word;
+        white-space: pre-wrap;
         margin: 0;
       }
     }
